--- a/PiniT/Views/Account/Register.cshtml
+++ b/PiniT/Views/Account/Register.cshtml
@@ -2,39 +2,65 @@
 @{
     ViewBag.Title = "Register";
 }
+<style>
+    body {
+        background: url('../../Content/Images/background.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        max-width:100%
+    }
+    .container{
+        max-width:80%
+    }
+    /*#loginimg {
+            background-image: url('Images/about.jpg');
+            height: 650px;
+            background-size: cover;
+            width: 100%;
+            opacity:1;
+            margin-bottom: 30px;
+        }*/
+</style>
 
-<h2>@ViewBag.Title.</h2>
+<div class="row">
+    <div class="col-md-6 text-center mx-auto">
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <h1 class="a mt-1 text-white font-weight-bolder font-italic mx-auto m-2">@ViewBag.Title</h1>
+            <hr />
+            <div class="container bg-light border border-light shadow-lg">
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="form-group text-center">
+                    @Html.LabelFor(m => m.Email, new { @class = "control-label font-italic font-weight-bold mt-1 mr-2" })
+                    <div class="col-md-6 col-sm-6 mx-auto text-center">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control font-weight-light text-center" })
+                    </div>
+                </div>
+                <div class="form-group text-center">
+                    @Html.LabelFor(m => m.Password, new { @class = "control-label font-italic font-weight-bold mr-0" })
+                    <div class="col-md-6 col-sm-6 col-lg-6 text-center font-italic mx-auto">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control text-center" })
+                    </div>
+                </div>
+                <div class="form-group text-center">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label font-italic font-weight-bold mr-0" })
+                    <div class="col-md-6 col-sm-6 col-lg-6 text-center font-italic mx-auto">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control text-center" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-6 mx-auto">
+                        <input type="submit" class="btn btn-success" value="Register" />
+                    </div>
+                </div>
+            </div>
+        }
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-}
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
