--- a/PiniT/Views/Shared/_Layout.cshtml
+++ b/PiniT/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse font-weight-bold text-white" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
                 @if (User.IsInRole("Manager"))
@@ -49,9 +49,9 @@
             <p class="mr-auto col-3 text-white font-italic">&copy; @DateTime.Now.Year - Pinit Application</p>
             @if (!User.Identity.IsAuthenticated)
             {
-                <div class="col-md-7 col">
+                @*<div class="col-md-7 col">
     @Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "btn btn-primary m-3" })
-            </div>
+            </div>*@
             }
         </footer>
         <div id="chat" class="d-none">
