--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -61,7 +61,10 @@ h3.a {
     color: white;
     text-shadow: 2px 2px black;
 }
-
+.roundedimage {
+    box-shadow: inset;
+    border-radius: 100%;
+}
 .roundimage {
     box-shadow: 4px 4px 4px #000000;
     height: 200px;
