--- a/PiniT/Views/Reservations/Create.cshtml
+++ b/PiniT/Views/Reservations/Create.cshtml
@@ -4,6 +4,46 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    .slidecontainer {
+      width: 100%;
+    }
+
+    .slider {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 15px;
+      border-radius: 5px;
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+    }
+
+    .slider:hover {
+      opacity: 1;
+    }
+
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #4CAF50;
+      cursor: pointer;
+    }
+
+    .slider::-moz-range-thumb {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: #4CAF50;
+      cursor: pointer;
+    }
+</style>
+
 <h2 class="m-0 mt-3 mb-3 text-center a">@Model.Restaurant.CompanyName</h2>
 
 @using (Html.BeginForm())
@@ -29,15 +69,17 @@
                     <p class="m-0">BookFee: <cite class="font-weight-light">  $10</cite></p>
                     <hr />
                     @Html.LabelFor(x => x.EstimatedTime)
+                @*<div class="slidecontainer">*@
                     <p id="estimated-time"></p>
+
                     @Html.EditorFor(x => x.EstimatedTime, new { htmlAttributes = new { type = "range", step = "5", @class = "form-control-range mx-auto", id = "estimatedTimeInput", min = "5", max = "90" } })
+                @*</div>*@
+                        <hr />
+                        @Html.LabelFor(x => x.Reservation.Comment, new { htmlAttributes = new { @class = "mx-auto" } })<br />
+                        @Html.EditorFor(x => x.Reservation.Comment, new { htmlAttributes = new { @class = "m-0 p-0 form-control border border-secondary font-weight-light mx-auto", rows = "5" } })
 
-                    <hr />
-                    @Html.LabelFor(x => x.Reservation.Comment, new { htmlAttributes = new { @class = "mx-auto" } })<br />
-                    @Html.EditorFor(x => x.Reservation.Comment, new { htmlAttributes = new { @class = "m-0 p-0 form-control border border-secondary font-weight-light mx-auto", rows = "5" } })
-
+                    </div>
                 </div>
-            </div>
         </div>
         <hr />
         <label class="checkbox-inline col-md-12 text-center p-1 mb-2 mx-auto"><input type="checkbox" name="HasAcceptedTerms" value="true" required>  Are you Sure?</label>
