--- a/PiniT/Views/Shared/_LoginPartial.cshtml
+++ b/PiniT/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,7 @@
 
     <ul class="navbar-nav">
         <li class="nav-item dropdown">
-            <i class="nav-link far fa-question-circle m-1" href="#" id="navbardrop" data-toggle="dropdown">
-
-            </i>
+            <i class="nav-link far fa-question-circle m-1" href="#" id="navbardrop" data-toggle="dropdown"></i>
             <div class="dropdown-menu bg-danger mt-2">
                 <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-keyboard" })</a>
                 <a class="">@Html.ActionLink("  Contact", "Contact", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-envelope" })</a>
@@ -24,10 +22,12 @@
 }
 else
 {
+
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item dropdown">
+    <li class="nav-item">@Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
+<li class="nav-item dropdown">
         <i class="nav-link far fa-question-circle m-1" href="#" id="navbardrop" data-toggle="dropdown">
-           
+
         </i>
         <div class="dropdown-menu bg-danger mt-2">
             <a class="">@Html.ActionLink("  How to Use", "About", "Home", null, new { @class = "nav-link col-md-12 text-left btn btn-danger far fa-keyboard" })</a>
