--- a/PiniT/Views/AccountWallets/AddCredits.cshtml
+++ b/PiniT/Views/AccountWallets/AddCredits.cshtml
@@ -9,32 +9,32 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4 class="h2 mx-auto my-2">Add Credits To Your PiniT Wallet!</h4>
-        <p> Simply Enter the amount you want to Add!</p>
+        <h4 class="mx-auto font-weight-bold font-italic text-center mt-3">Add Credits To Your PiniT Wallet!</h4>
+        <p class="mx-auto text-center mb-2"> Simply Enter the amount you want to Add!</p>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Wallet.Id)
+        <div class="container col-md-6 mx-auto bg-white text-center">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Wallet.Id)
 
-        <h5 class="h5 form-group">Your Credits: @Html.DisplayFor(model => model.Wallet.Credits)</h5>
-        <hr />
-        <div class="form-group">
+            <h5 class="h5 col-md-6 form-group mx-auto text-center font-italic font-weight-bold">Your Credits: <cite class="font-weight-light">@Html.DisplayFor(model => model.Wallet.Credits)</cite></h5>
+            <hr />
+            <div class="form-group col-md-6 text-center mx-auto">
+                @Html.LabelFor(model => model.AmountToBeAdded, htmlAttributes: new { @class = "control-label font-weight-bold h5" })
+                <div class="col-md-10 text-center mx-auto">
+                    @Html.EditorFor(model => model.AmountToBeAdded, new { htmlAttributes = new { @class = "form-control text-center font-weight-light" } })
+                    @Html.ValidationMessageFor(model => model.AmountToBeAdded, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-            @Html.LabelFor(model => model.AmountToBeAdded, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-
-                @Html.EditorFor(model => model.AmountToBeAdded, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AmountToBeAdded, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-6 text-center mx-auto">
+                    <input type="submit" value="Submit" class="btn btn-danger" />
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Submit" class="btn btn-danger" />
-            </div>
         </div>
-    </div>
-}
+        }
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
