--- a/PiniT/Views/Admin/CreateProductCategory.cshtml
+++ b/PiniT/Views/Admin/CreateProductCategory.cshtml
@@ -4,36 +4,37 @@
     ViewBag.Title = "CreateProductCategory";
 }
 
-<h2>CreateProductCategory</h2>
+<h2 class="a text-center mx-auto mt-3 mb-3">CreateProductCategory</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>ProductCategory</h4>
+    <div class="form-horizontal col-md-6 bg-white container mx-auto text-center">
+     
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="h4 form-group col-md-6 text-center mx-auto">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label font-weight-normal" })
+            <div class="col-md-12 text-center mx-auto">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-8 btn-group m-2 mx-auto text-center">
+                <input type="submit" value="Create" class="btn btn-success" />
+                @Html.ActionLink("Back", "ProductCategoryIndex",null,new { @class="btn btn-dark"})
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "ProductCategoryIndex")
-</div>
+
+    
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
