--- a/PiniT/Views/Admin/DeleteCustomer.cshtml
+++ b/PiniT/Views/Admin/DeleteCustomer.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "DeleteCustomer";
 }
 
-<h2>DeleteCustomer</h2>
+<h2 class="a text-center mx-auto mt-3 mb-3">DeleteCustomer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PiniTCustomer</h4>
+<h3 class="text-center mx-auto">Are you sure you want to delete this?</h3>
+
+<div class="container col-md-6 mx-auto bg-white text-center">
+    <h4 class="mt-2 mb-2">PiniTCustomer</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -44,12 +45,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "CustomersIndex")
+        <div class="form-actions btn-group mx-auto text-center">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back", "CustomersIndex",null,new { @class="btn btn-dark"})
         </div>
     }
 </div>
