--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -64,6 +64,8 @@ h3.a {
 .roundedimage {
     box-shadow: inset;
     border-radius: 100%;
+    height:100%;
+    width:100%;
 }
 .roundimage {
     box-shadow: 4px 4px 4px #000000;
