--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
     body {
         background-image: url('../../Content/Images/background.jpg');
         background-size:cover;
+        background-attachment:fixed;
     }
 
 </style>
