--- a/PiniT/Views/Tables/CustomerIndex.cshtml
+++ b/PiniT/Views/Tables/CustomerIndex.cshtml
@@ -7,7 +7,7 @@
         body {
             background-image: url("https://www.wyndhamgrandathens.com/uploads/photos/2018/10/TRIAINA_RESTAURANT__4288.jpg") ;
             background-size: cover;
-            
+            background-attachment:fixed;
         }
     </style>
     
