--- a/PiniT/Views/Admin/DeleteCustomer.cshtml
+++ b/PiniT/Views/Admin/DeleteCustomer.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h2 class="a text-center mx-auto mt-3 mb-3">DeleteCustomer</h2>
-
 <h3 class="text-center mx-auto">Are you sure you want to delete this?</h3>
 
 <div class="container col-md-6 mx-auto bg-white text-center">
@@ -49,7 +48,7 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions btn-group mx-auto text-center">
+        <div class="form-group btn-group mx-auto text-center">
             <input type="submit" value="Delete" class="btn btn-danger" />
             @Html.ActionLink("Back", "CustomersIndex",null,new { @class="btn btn-dark"})
         </div>
