--- a/PiniT/Views/Admin/DeleteManager.cshtml
+++ b/PiniT/Views/Admin/DeleteManager.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "DeleteManager";
 }
 
-<h2>DeleteManager</h2>
+<h2 class="a text-center mx-auto mt-3 mb-3">Delete Manager</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
+<h3 class="text-center mx-auto">Are you sure you want to delete this?</h3>
+<div class="container col-md-6 mx-auto bg-white text-center">
     <h4>PiniTManager</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -36,12 +36,12 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "ManagersIndex")
+        <div class="form-group btn-group mx-auto text-center">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back", "ManagersIndex", null, new { @class = "btn btn-dark" })
         </div>
     }
 </div>
