--- a/PiniT/Views/Admin/EditCustomer.cshtml
+++ b/PiniT/Views/Admin/EditCustomer.cshtml
@@ -4,12 +4,13 @@
     ViewBag.Title = "EditCustomer";
 }
 
-<h2>EditCustomer</h2>
+<h2 class="a text-center mx-auto mt-3 mb-3">EditCustomer</h2>
 
+<div class="container col-md-6 mx-auto bg-white text-center">
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <h4>PiniTCustomer</h4>
@@ -25,32 +26,29 @@
         @Html.HiddenFor(model => model.PhoneNumberConfirmed)
         @Html.HiddenFor(model => model.TwoFactorEnabled)
         @Html.HiddenFor(model => model.LockoutEnabled)
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="h4 form-group col-md-6 text-center mx-auto">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label font-weight-normal" })
+            <div class="col-md-12 text-center mx-auto">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="h4 form-group col-md-6 text-center mx-auto">
+            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label font-weight-normal" })
+            <div class="col-md-12 text-center mx-auto">
+                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
                 @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+       
+            <div class="form-group btn-group mx-auto text-center">
+                <input type="submit" value="Save" class="btn btn-danger" />
+                @Html.ActionLink("Back", "CustomersIndex", null, new { @class = "btn btn-dark" })
             </div>
-        </div>
     </div>
-}
+    }
+    </div>
 
-<div>
-    @Html.ActionLink("Back to List", "CustomersIndex")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
