--- a/PiniT/Views/Admin/EditManager.cshtml
+++ b/PiniT/Views/Admin/EditManager.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "EditManager";
 }
 
-<h2>EditManager</h2>
+<h2 class="a text-center mx-auto mt-3 mb-3">EditManager</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
+<div class="form-horizontal col-md-6 bg-white container mx-auto text-center">
     <h4>PiniTManager</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -27,32 +27,31 @@
     @Html.HiddenFor(model => model.TwoFactorEnabled)
     @Html.HiddenFor(model => model.LockoutEnabled)
 
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+    <div class="h4 form-group col-md-6 text-center mx-auto">
+        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label font-weight-normal" })
+        <div class="col-md-12 text-center mx-auto">
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+    <div class="h4 form-group col-md-6 text-center mx-auto">
+        @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label font-weight-normal" })
+        <div class="col-md-12 text-center mx-auto">
+            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control font-weight-light" } })
             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
+
+    <div class="form-group btn-group mx-auto text-center">
+        <input type="submit" value="Save" class="btn btn-danger" />
+        @Html.ActionLink("Back", "ManagersIndex", null, new { @class = "btn btn-dark" })
     </div>
+
 </div>
+
+    
 }
 
-<div>
-    @Html.ActionLink("Back to List", "ManagersIndex")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
