Google Search Address

--- a/PiniT/Views/Tables/ManagerIndex.cshtml
+++ b/PiniT/Views/Tables/ManagerIndex.cshtml
@@ -32,7 +32,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th>
+        <th style="width:25%">
             <cite>@Html.ActionLink(" ", "Create", null, new { id = "data-toggle", @class = "btn btn-primary fas fa-plus mt-1 ml-1 p-1" })</cite>
         </th>
     </tr>
