--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -61,12 +61,14 @@ h3.a {
     color: white;
     text-shadow: 2px 2px black;
 }
+
 .roundedimage {
     box-shadow: inset;
     border-radius: 100%;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
 }
+
 .roundimage {
     box-shadow: 4px 4px 4px #000000;
     height: 200px;
@@ -292,3 +294,11 @@ h3.a {
         background: lightblue;
         cursor: pointer;
     }
+    
+    .gotomarker{
+        transition:0.3s;
+    }
+.gotomarker:hover {
+    color:red;
+    cursor:pointer;
+}
