--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -69,7 +69,7 @@
                 <br />
                 Total Free Tables: <cite class="font-weight-light">@restaurant.Tables.Count(x => x.IsBooked == false)</cite>
                 <br />
-                Address: <cite class="font-weight-light">@restaurant.Address</cite>
+                Address: <cite class="font-weight-light">@restaurant.Address</cite> <i class="fas fa-map-marker gotomarker" data-address="@restaurant.Address"></i>
                 <br/>
                     @Html.ActionLink(" Book Now!", "CustomerIndex", "Tables", new { id = restaurant.RestaurantId }, new { @class = "btn btn-danger col-md-6 fab fa-pinterest-p mt-5 mb-1" })
                     @Html.ActionLink(" Menu", "CustomerIndex", "Products", new { id = restaurant.RestaurantId }, new { @class = "btn btn-primary col-md-6 fas fa-book-open mb-1" })
@@ -79,13 +79,6 @@
             
 
         </div>
-        @*<div class="card-footer border-dark bg-light text-center">
-            <div class="row btn-group mr-auto">
-                @Html.ActionLink(" Book Now!", "CustomerIndex", "Tables", new { id = restaurant.RestaurantId }, new { @class = "btn btn-danger col-12 fab fa-pinterest-p" })
-                @Html.ActionLink(" Menu", "CustomerIndex", "Products", new { id = restaurant.RestaurantId }, new { @class = "btn btn-primary col-6 fas fa-book-open" })
-                <button id="@restaurant.RestaurantId" data-company="@restaurant.CompanyName" class="btn btn-secondary col-6 restaurant-chat fas fa-comments"> Chat</button>
-            </div>
-        </div>*@
     </div>
 </div>
     }
@@ -146,6 +139,17 @@
 
         });
 
+    </script>
+    <script>
+        $(document).ready(() => {
+
+            $('.gotomarker').on('click', (e) => {
+                let markAddress = e.currentTarget.getAttribute('data-address');
+
+                window.open(`https\://www.google.com/maps/search/?api=1&query=${markAddress}`);
+            });
+
+        });
     </script>
 }
 
