--- a/PiniT/Views/Restaurants/Create.cshtml
+++ b/PiniT/Views/Restaurants/Create.cshtml
@@ -15,7 +15,7 @@
     <h4>Restaurant</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    
+
     <div class="form-group">
         @Html.LabelFor(model => model.Restaurant.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -32,9 +32,16 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(model => model.Restaurant.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Restaurant.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Restaurant.Address, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(model => model.Restaurant.Type, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.ListBoxFor(model=>model.SelectedTypes, Model.Types)
+            @Html.ListBoxFor(model => model.SelectedTypes, Model.Types)
             @Html.ValidationMessageFor(model => model.Restaurant.Type, "", new { @class = "text-danger" })
         </div>
     </div>
