--- a/PiniT/Views/Shared/_Layout.cshtml
+++ b/PiniT/Views/Shared/_Layout.cshtml
@@ -21,14 +21,14 @@
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
                 @if (User.IsInRole("Manager"))
                 {
-                    <li class="nav-item">@Html.ActionLink("Wallet", "Index", "AccountWallets", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item my-auto" style="color:yellow;">@Html.ActionLink(" ", "Index", "AccountWallets", null, new { @class = "nav-link fas fa-coins p-0 fa-2x text-warning" })</li>
                     <li class="nav-item">@Html.ActionLink("Restaurant", "ManagerIndex", "Restaurants", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Menu", "ManagerIndex", "Products", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Reservations", "Index", "Reservations", null, new { @class = "nav-link" })</li>
                 }
                 @if (User.IsInRole("Customer"))
                 {
-                    <li class="nav-item">@Html.ActionLink("Wallet", "Index", "AccountWallets", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item my-auto" style="color:yellow;">@Html.ActionLink(" ", "Index", "AccountWallets", null, new { @class = "nav-link fas fa-coins p-0 fa-2x text-warning" })</li>
                     <li class="nav-item">@Html.ActionLink("Reservations", "Index", "Reservations", null, new { @class = "nav-link" })</li>
                 }
                 @if (User.IsInRole("Admin"))
@@ -48,12 +48,6 @@
         <hr />
         <footer class="row">
             <p class="mr-auto col-3 text-white font-italic">&copy; @DateTime.Now.Year - Pinit Application</p>
-            @if (!User.Identity.IsAuthenticated)
-            {
-                @*<div class="col-md-7 col">
-    @Html.ActionLink("Business Account", "RegisterManager", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "btn btn-primary m-3" })
-            </div>*@
-            }
         </footer>
         <div id="chat" class="d-none">
             <div class="row">
