--- a/PiniT/Views/Admin/RestaurantTypeIndex.cshtml
+++ b/PiniT/Views/Admin/RestaurantTypeIndex.cshtml
@@ -3,19 +3,24 @@
 @{
     ViewBag.Title = "RestaurantTypeIndex";
 }
+<style>
+#create-type{
+    position:absolute;
+    top:0;
+    left:0;
+    margin:5px;
+}
+</style>
+<h2 class="a text-center mx-auto mt-3 mb-3">RestaurantType</h2>
 
-<h2 class="a text-center mx-auto mt-3 mb-3">RestaurantTypeIndex</h2>
-
-<p>
-    
-</p>
-<table class="col-md-6 font-weight-normal mx-auto text-center container bg-white">
+<table class="col-md-4 font-weight-normal mx-auto text-center container bg-white">
     <tr>
-        <th class="h4">
+        <th class="h4 ml-2">
+            @Html.ActionLink(" ", "CreateRestaurantType", null, new {id="create-type", @class = "btn btn-primary fas fa-plus" })
             @Html.DisplayNameFor(x => x.Name)
-           
-        </th>
+        </th> 
     </tr>
+  
 
 @foreach (var item in Model) {
 <tr>
@@ -23,7 +28,6 @@
         @Html.DisplayFor(modelItem => item.Name)
     </td>
     <td class="form-group mx-auto text-center btn-group">
-    @Html.ActionLink(" ", "CreateRestaurantType", null, new { @class = "btn btn-primary fas fa-plus" })
     </td>
 </tr>
 }
