--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -4,25 +4,36 @@
     ViewBag.Title = "CustomerIndex";
 }
 
-    <style>
-        body {
-
-            background-image: url("/Content/Images/background.jpg");
-            background-size: cover;
-            background-attachment:fixed;
-            
-        }
-        .card-img-top{
-            width:100px; 
-            height:275px;
-        }
-    </style>
+<style>
+    body {
+        background-image: url("/Content/Images/background.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+        
+    }
+    .card-img-top {
+        width: 100px;
+        height: 275px;
+    }
+    #card-back{
+        background-image: linear-gradient(to right,rgba(84, 22, 7, 0.87),rgb(233, 66, 66));
+        
+        
+    }
+   
+</style>
 <br>
 
-<h2 class="a  mx-auto font-weight-bolder text-center" style="color:rgba(250, 250, 250, 0.7);">Available Restaurants</h2>
+<h2 class="a  mx-auto font-weight-bolder text-white text-center">Available Restaurants</h2>
 
 <div class="row mt-3 mb-1">
-    <div id="a" class="col-md-6 p-3 border rounded bg-light mx-auto">
+    <div id="a" class="col-md-6 p-3 rounded mx-auto" @*style="background: repeating-linear-gradient(
+   -55deg,
+  #222,
+  #222 10px,
+  #333 10px,
+  #333 20px
+)"*@>
         @using (Html.BeginForm("CustomerIndex", "Restaurants", FormMethod.Get, new { id = "search-form" }))
         {
             <div id="filters" class="row">
@@ -33,7 +44,7 @@
                     @Html.DropDownListFor(x => x.Type, (SelectList)ViewBag.RestaurantTypes, "Type", new { @class = "form-control", id = "restType" })
                 </div>
                 <div class="col-2 px-1">
-                    <button id="search" type="submit" class="btn btn-primary btn-block">Search</button>
+                    <button id="search" type="submit" class="btn btn-danger btn-block">Search</button>
                 </div>
             </div>
         }
@@ -41,47 +52,46 @@
 </div>
 
 
-    @foreach (var restaurant in Model.Restaurants)
-    {<div class="row">
-    <div class="col col-sm-10 card shadow-lg mx-auto mb-1 p-0">
-        <div class="card-header border-dark font-weight-bolder bg-dark text-white text-center">
-            <h4 class="m-0 font-italic font-weight-bolder">@restaurant.CompanyName</h4>
-        </div>
+@foreach (var restaurant in Model.Restaurants)
+{<div class="row">
+     <div  id="card-back" class="col col-sm-10 card shadow-lg mx-auto mb-1 p-0">
+         <div class="card-header border-dark font-weight-bolder bg-dark text-white text-center">
+             <h4 class="m-0 font-italic font-weight-bolder">@restaurant.CompanyName</h4>
+         </div>
 
-        <div class="card-body bg-light border-dark text-center p-1">
-            <div class="row">
-                @if (restaurant.Images.FirstOrDefault(x => x.isProfileImage) == null)
-                {
-                    <img class="col-md-4 col card-img-top roundedimage" src="https://comelite-arch.com/wp-content/uploads/2018/04/How-to-Create-a-Successful-Fine-Dining-Restaurant-0-256x256.jpg" alt="restaurant1">
-                }
-                else
-                {
-                    <img class="col-md-4 col card-img-top roundedimage" src="@Url.Content(restaurant.Images.FirstOrDefault(x=>x.isProfileImage).ImagePath)" alt="restaurant1">
+         
+         <div class="card-body border-dark text-center p-1">
+             <div class="row">
+                 @if (restaurant.Images.FirstOrDefault(x => x.isProfileImage) == null)
+                 {
+                     <img class="col-md-4 col card-img-top roundedimage" src="https://comelite-arch.com/wp-content/uploads/2018/04/How-to-Create-a-Successful-Fine-Dining-Restaurant-0-256x256.jpg" alt="restaurant1">
+                 }
+                 else
+                 {
+                     <img class="col-md-4 col card-img-top roundedimage" src="@Url.Content(restaurant.Images.FirstOrDefault(x=>x.isProfileImage).ImagePath)" alt="restaurant1">
 
-                }
-            <p class="m-0 col-md-8 col-6 text-center font-italic my-3">
-                
-                Restaurant Type:
-                @foreach (var item in restaurant.Type)
-                {
-                    <cite class="font-weight-light">@item.Name</cite>
-                }
-                <br />
-                Total Free Tables: <cite class="font-weight-light">@restaurant.Tables.Count(x => x.IsBooked == false)</cite>
-                <br />
-                Address: <cite class="font-weight-light">@restaurant.Address</cite> <i class="fas fa-map-marker gotomarker" data-address="@restaurant.Address"></i>
-                <br/>
-                    @Html.ActionLink(" Book Now!", "CustomerIndex", "Tables", new { id = restaurant.RestaurantId }, new { @class = "btn btn-danger col-md-6 fab fa-pinterest-p mt-5 mb-1" })
-                    @Html.ActionLink(" Menu", "CustomerIndex", "Products", new { id = restaurant.RestaurantId }, new { @class = "btn btn-primary col-md-6 fas fa-book-open mb-1" })
-                    <button id="@restaurant.RestaurantId" data-company="@restaurant.CompanyName" class="btn btn-secondary col-md-6 restaurant-chat fas fa-comments"> Chat</button>
-            </p>
-            </div>
-            
+                 }
+                 <p class="m-0 col-md-8 col-6 text-center text-white font-italic my-3">
 
-        </div>
+                     Restaurant Type:
+                     @foreach (var item in restaurant.Type)
+                     {
+                         <cite class="font-weight-light" style="z-index:0">@item.Name</cite>
+                     }
+                     <br />
+                     Total Free Tables: <cite class="font-weight-light">@restaurant.Tables.Count(x => x.IsBooked == false)</cite>
+                     <br />
+                     Address: <cite class="font-weight-light">@restaurant.Address</cite> <i class="fas fa-map-marker-alt gotomarker" data-address="@restaurant.Address"></i>
+                     <br />
+                     @Html.ActionLink(" Book Now!", "CustomerIndex", "Tables", new { id = restaurant.RestaurantId }, new { @class = "btn btn-danger col-md-6 fab fa-pinterest-p mt-5 mb-1" })
+                     @Html.ActionLink(" Menu", "CustomerIndex", "Products", new { id = restaurant.RestaurantId }, new { @class = "btn btn-primary col-md-6 fas fa-book-open mb-1" })
+                     <button id="@restaurant.RestaurantId" data-company="@restaurant.CompanyName" class="btn btn-secondary col-md-6 restaurant-chat fas fa-comments"> Chat</button>
+                 </p>
+             </div>
+         </div>
+     </div>
     </div>
-</div>
-    }
+}
 
 
 @section scripts {
@@ -95,29 +105,29 @@
                 searchForm.submit();
             };
             $('.restaurant-chat').click((e) => {
-                
+
                 $(`#chat`).html('');
                 $('#chat').removeClass('d-none');
                 $('#chat').append(`<div class="row">
-                                        <div class="card shadow-lg border border-dark p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="width:280px;">
-                                            <div class="card-header border-dark font-weight-bolder bg-dark text-white text-center">
-                                                <div class="row">
-                                                    <p class="col-10 mb-0 mr-auto ml-2">${e.target.getAttribute('data-company')}</p>
-                                                    <button type="button" id="closeme" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
+                                            <div class="card shadow-lg border border-dark p-0 fixed-bottom alert alert-dismissible fade show ml-auto" role="alert" style="width:280px;">
+                                                <div class="card-header border-dark font-weight-bolder bg-dark text-white text-center">
+                                                    <div class="row">
+                                                        <p class="col-10 mb-0 mr-auto ml-2">${e.target.getAttribute('data-company')}</p>
+                                                        <button type="button" id="closeme" class="close col-2 ml-auto mr-1" data-dismiss="alert" aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <div class="card-body bg-light border-dark">
+                                                    <div id="messages" class="overflow-auto" style="height:120px"></div>
+                                                        <br/>
+                                                    <input id="message" class="form-control border border-dark" placeholder="Enter a message">
+                                                    <button id="send" class="btn btn-dark mt-1 mx-auto" type="button" aria-expanded="false">
+                                                        Send a Chat Request
                                                     </button>
                                                 </div>
                                             </div>
-                                            <div class="card-body bg-light border-dark">
-                                                <div id="messages" class="overflow-auto" style="height:120px"></div>
-                                                    <br/>
-                                                <input id="message" class="form-control border border-dark" placeholder="Enter a message">
-                                                <button id="send" class="btn btn-dark mt-1 mx-auto" type="button" aria-expanded="false">
-                                                    Send a Chat Request
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>`);
+                                        </div>`);
 
                 $.connection.hub.start().done(() => {
 
@@ -131,7 +141,7 @@
                 });
                 hub.client.gotMessage = (from, message) => {
                     console.log(message);
-                $('#messages').append(`<p>Manager: ${message}</p>`);
+                    $('#messages').append(`<p>Manager: ${message}</p>`);
                 };
 
             });
