--- a/PiniT/Views/Home/About.cshtml
+++ b/PiniT/Views/Home/About.cshtml
@@ -1,16 +1,13 @@
 ﻿@{
     ViewBag.Title = "How it works";
 }
-@*<h2>@ViewBag.Title.</h2>*@
-@*<h3>@ViewBag.Message</h3>*@
+
 
 <style>
     body {
-        /*background-image: url('../../Content/Images/backrf.jpg');*/
-        /*background-image: url('../../Content/Images/patern.png');*/
-        /*background-image: url('../../Content/Images/background.jpg');*/
-        /*background-image: url('../../Content/Images/table.jpg');*/
+      
         background-image: url('../../Content/Images/background.jpg');
+        background-size:cover;
     }
 </style>
 
