--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -106,15 +106,15 @@ h3.a {
 
 .homeboxb {
     padding: 10px;
+    
     background-color: lightgrey;
-    opacity: 0.8;
+    opacity: 0.9;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-family: 'Berkshire Swash', cursive;
     font-size: 100%;
     color: black;
     margin-bottom: 40px;
 }
-
 
 .circle {
     margin-top: 40px;
@@ -170,19 +170,21 @@ h3.a {
 @keyframes animatedBackground {
     from {
         background-position: 0 0;
+       
     }
 
     to {
         background-position: 100% 0;
+        
     }
 }
 
 #animate-area {
-    background-image: url("https://www.tropical-islands.de/fileadmin/_processed_/3/7/csm_TI_RESTAURANT_TROPICAL-GARDEN1_RGB_2000x860_61b40cc4c5.jpg") right bottom no-repeat, url("http://www.amanogroup.de/wp-content/uploads/2015/08/0213.jpg") left top repeat;
-    background-size: 1100px 400px;
+    background-image: url("Images/bannerafi.jpg"), url("Images/banerb.jpg");
+    height:330px;
     background-position: 0px 0px;
     background-repeat: repeat-x;
-    animation: animatedBackground 5s linear infinite;
+    animation: animatedBackground 15s linear infinite;
 }
 
 
@@ -317,3 +319,44 @@ h3.a {
     margin: 5px;
 }
 
+.rest-img {
+    opacity: 1;
+    display: flex;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    cursor: pointer;
+    text-align: center;
+}
+
+.container:hover .image {
+    opacity: 0.1;
+    cursor: pointer;
+}
+
+.container:hover .middle {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.text {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 10px;
+    cursor: pointer;
+    padding: 12px 28px;
+}
