--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -40,18 +40,17 @@
                 }
             </div>
             }
-        </div>
-        
+        </div>     
     </div>
-
     <div class="homeboxa">
         <div class="row">
             <h2 class="ml-4">Are you hungry for...</h2>
         </div>
     </div>
 
-    <div id="" class="homeboxb">
-    <div class="row text-center mx-auto">
+    <div id="animate-area" class="homeboxb">
+
+    @*<div class="row text-center mx-auto">
         <div class="col-md-4">
             <h5>
                 Pizza
@@ -80,5 +79,5 @@
             <h5>Sushi</h5>
             <img class="roundimages" src="~/Content/images/sushi.jpg" />
         </div>
-    </div>
+    </div>*@
     </div>
