--- a/PiniT/Views/Home/Index.cshtml
+++ b/PiniT/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 </style>
 
     <div class="homeimage">
-        <p class="homeimagetxt text-right mr-2">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Blanditiis accusamus ex, <br> veritatis repellat laudantium, dolores <br> doloribus in praesentium dolore <br> reprehenderit omnis beatae numquam sed <br> eum quasi vero ipsa non porro.</p>
+        <p class="homeimagetxt text-right mr-2">Find the coolest Restaurants! <br> Make nice and easy Reservations! <br />Fill your belly with delicious food! </p>
     </div>
 
     <div class="homeboxa">
