--- a/PiniT/Views/Products/Edit.cshtml
+++ b/PiniT/Views/Products/Edit.cshtml
@@ -20,39 +20,39 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <div class="col-md-6 col-8 shadow-lg container border border-white bg-white text-center mx-auto">
+    <div class="col-md-8 col shadow-lg container border border-white bg-white text-center mx-auto">
             
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.ProductId)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold" })
-                <div class="col-md-6 mx-auto">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold mx-auto" })
+                <div class="col-md-10 mx-auto">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control mx-auto" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold" })
-                <div class="col-md-6 mx-auto">
-                    @Html.DropDownListFor(x => x.CategoryId, (SelectList)ViewBag.Categories, "Category", htmlAttributes: new { @class = "form-control" })
+                @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold mx-auto" })
+                <div class="col-md-10 mx-auto">
+                    @Html.DropDownListFor(x => x.CategoryId, (SelectList)ViewBag.Categories, "Category", htmlAttributes: new { @class = "form-control mx-auto" })
                     @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold" })
-                <div class="col-md-6 mx-auto">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold mx-auto" })
+                <div class="col-md-10 mx-auto">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control mx-auto" } })
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold" })
-                <div class="col-md-6 mx-auto">
-                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2 font-italic font-weight-bold mx-auto" })
+                <div class="col-md-10 mx-auto">
+                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control mx-auto" } })
                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
                 </div>
             </div>
